force-app/main/default/objects/Invoice__c/fields/Days_Since_Raised__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Raised__c</fullName>
    <formula>TODAY()-Invoiced_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Raised</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>