force-app/main/default/objects/Invoice__c/fields/is_Generated_in_LEX__c.field-meta.xml
<CustomField>
    <fullName>is_Generated_in_LEX__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Generated in Lightning Experience</description>
    <label>is Generated in LEX?</label>
    <type>Checkbox</type>
</CustomField>