force-app/main/default/objects/Invoice__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <formula>Site__r.Purchase_Order__c</formula>
    <label>Purchase Order #</label>
    <type>Text</type>
</CustomField>