force-app/main/default/objects/Invoice__c/fields/Total_Invalid_Unit_Price_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_Invalid_Unit_Price_Items__c</fullName>
    <label>Total Invalid Unit Price Items</label>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Unit_Price_Invalid__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>