force-app/main/default/objects/Invoice__c/listViews/All_INV_This_FY.listView-meta.xml
<ListView>
    <fullName>All_INV_This_FY</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>Site__c</columns>
    <columns>Total__c</columns>
    <columns>Status__c</columns>
    <columns>Invoiced_Date__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoiced_Date__c</field>
        <operation>greaterThan</operation>
        <value>7/1/2024</value>
    </filters>
    <label>All INV This FY</label>
</ListView>