force-app/main/default/objects/Invoice__c/listViews/All_INVS_Last_30_Days.listView-meta.xml
<ListView>
    <fullName>All_INVS_Last_30_Days</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>Site__c</columns>
    <columns>Total__c</columns>
    <columns>Status__c</columns>
    <columns>Days_Since_Raised__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Days_Since_Raised__c</field>
        <operation>lessOrEqual</operation>
        <value>30</value>
    </filters>
    <label>All INVS Last 30 Days</label>
</ListView>