force-app/main/default/objects/Invoice__c/listViews/Frac_INV.listView-meta.xml
<ListView>
    <fullName>Frac_INV</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>Site__c</columns>
    <columns>Total__c</columns>
    <columns>Status__c</columns>
    <columns>Invoiced_Date__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contract__c</field>
        <operation>equals</operation>
        <value>564</value>
    </filters>
    <label>Frac INV</label>
</ListView>