force-app/main/default/objects/Invoice__c/listViews/INV_Approved.listView-meta.xml
<ListView>
    <fullName>INV_Approved</fullName>
    <columns>NAME</columns>
    <columns>Contract__c</columns>
    <columns>Site__c</columns>
    <columns>Total__c</columns>
    <columns>Status__c</columns>
    <columns>Invoiced_Date__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Invoiced - OPEN</label>
</ListView>